# zkotp-circuit

./: LICENSE  README.md
host/: Cargo.toml
host/src/: main.rs
methods/guest/: Cargo.toml  build.rs
methods/guest/src/: main.rs
