[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "^2.0.2" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
anyhow = "1.0.98"
data-encoding = "2.9.0"
hex-literal = "0.4.1"
tracing = "0.1.41"
byteorder = "1.5.0"
hmac = "0.12.1"
sha1 = "0.10.6"
